[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "grscheller.datastructures"
authors = [
    { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.10"
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://github.com/grscheller/datastructures/README.md"
Source = "https://github.com/grscheller/datastructures"
Changelog = "https://github.com/grscheller/datastructures/CHANGELOG.md"
